--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Qҽҽɳ-乙azie-MD",
+  "name": "Queen-Zazie-MD",
   "description": "Javascript WhatsApp Bot Made By NBT💫",
   "logo": "https://i.postimg.cc/xdhMJy1b/Screenshot-20240830-004711-Pixel-Lab.jpg",
   "keywords": ["bot"],
